scoring.css
div#dexscoring {
  display: flex;
  position: relative;
  width: 100%;
  flex-flow: row;
  overflow: hidden;
}

.matchup-box {
  flex: none;
  width: 100%;
  display: flex;
  flex-flow: row;
  flex-shrink: 0;
  flex-grow: 0;
}

.franchise-box {
  width: 50%;
  display: block;
  position: relative;
}

div.franchise-icon,
.franchise-name,
.franchise-score {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
}

div.franchise-icon {
  height: 175px;
}
div.franchise-score {
  font-size: 2rem;
}
.players {
  display: flex;
  flex-flow: column;
}

.franchise-icon img {
  display: block;
  max-width: 150px;
  max-height: 150px;
}
.player-row {
  height: 50px;
  display: flex;
  flex: 1 0 100%;
  flex-flow: row;
}
.player-row.playing {
  background: rgba(10, 120, 2, 0.2);
}
.player-row.done {
  background: rgba(160, 163, 160, 0.2);
}
.player-row.position-order-QB {
  order: 1;
}
.player-row.position-order-RB {
  order: 2;
}
.player-row.position-order-WR {
  order: 3;
}
.player-row.position-order-TE {
  order: 4;
}
.player-row.position-order-Def {
  order: 5;
}
.player-row.position-order-PK {
  order: 6;
}
.players-bench {
  order: 7;
  border-top: 2px solid #c3c3c3;
  margin: 10px 0;
  position: relative;
}
.players-bench::before {
  content: "Bench";
  position: absolute;
  top: -10px;
  background: #fff;
  margin-left: 15px;
}
.players-bench > .player-row:nth-child(1) {
  margin-top: 8px;
}
.players > .player-row.position-order-bench {
  order: 9;
}
.player-position {
  align-self: center;
  font-weight: bold;
  padding: 0 0.25em;
  flex-grow: 0;
}

.player-image {
  max-width: 107px;
  flex-grow: 0;
  align-self: center;
  margin: 0 7px;
}

.player-image img {
  max-height: 50px;
  border-radius: 3em;
  min-width: 38px;
}

.player-details-box {
  flex-grow: 1;
  display: flex;
  flex-flow: column;
}

.player-name {
  display: flex;
  flex-flow: row;
}
.player-name h3 {
  color: #000;
  margin-left: 7px;
}
.player-team {
  max-width: 20px;
  max-height: 20px;
  flex-grow: 1;
  align-self: center;
}
.player-team img {
  max-width: 20px;
  max-height: 20px;
}
.player-score-box {
  margin: 0 7px;
  min-width: 55px;
  align-self: center;
}
.player-live-score {
  font-size: 1.25rem;
  align-self: center;
  text-align: center;
}
.player-projected-score {
  font-size: 0.75rem;
  font-style: italic;
  align-self: center;
  text-align: center;
}
.player-row.position-order-Def .player-team {
  display: none;
}
.franchise-name h2 {
  color: #000;
  background: none;
  font-size: 1.75rem;
  margin: 10px 0;
}
.franchise-box:nth-child(odd) .players {
  border-right: 1px solid #c2c2c2;
}
.franchise-box:nth-child(even) .player-row .player-score-box {
  order: 1;
}
.franchise-box:nth-child(even) .player-row .player-details-box {
  order: 2;
}
.franchise-box:nth-child(even) .player-row .player-image {
  order: 3;
}
.franchise-box:nth-child(even) .player-row .player-position {
  order: 4;
}
.player-live-score.beat-projection {
  color: #04782c;
}
#nav-dots {
  position: absolute;
  top: 245px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-flow: row;
  flex-grow: 1;
  left: 0;
  right: 0;
}
.nav-dots > div {
  margin: 0 5px;
  cursor: pointer;
}
.nav-dots i {
  font-size: 1.25rem;
}
.nav-dots .active i.fa.fa-circle {
  color: green;
}

.player-stats {
  font-size: 0.9rem;
}

@media only screen and (max-width: 760px) {
  .player-name h3 {
    font-size: 12px;
  }
  .player-team {
    display: none;
  }
  .player-live-score {
    font-size: 1rem;
  }
  .player-projected-score {
    font-size: 0.65rem;
  }
  .player-row {
    height: 60px;
  }
  .franchise-name h2 {
    font-size: 1.15rem;
    margin: 4px 0;
  }
  div.franchise-icon {
    height: 150px;
  }
  div.franchise-name {
    height: 50px;
  }
  div.franchise-score {
    height: 50px;
    margin-bottom: 20px;
  }
  .player-score-box {
    margin: 0 3px;
  }
  .player-image {
    max-width: 80xpx;
    margin: 0 5px;
  }
  .player-name h3 {
    margin-left: 3px;
  }
  #nav-dots {
    top: 250px;
  }
  .nav-dots i {
    font-size: 1rem;
  }
  .player-stats {
    font-size: 0.7rem;
  }
}

